--- a/index.html
+++ b/index.html
@@ -34,37 +34,43 @@
         </div>
         <div class="registration-form__body">
           <h3>Let's do this!</h3>
-          <form action="" method="post">
+          <form action="" method="">
             <div class="registration-form__input">
               <label for="name">first name</label>
-              <input type="text" id="name" name="username" />
+              <input type="text" id="name" name="username" required />
             </div>
             <div class="registration-form__input">
               <label for="lastname">last name</label>
-              <input type="text" id="lastname" name="lastname" />
+              <input type="text" id="lastname" name="lastname" required />
             </div>
             <div class="registration-form__input">
               <label for="email">email</label>
-              <input type="email" id="email" name="email" />
+              <input type="email" id="email" name="email" required />
             </div>
             <div class="registration-form__input">
               <label for="phone">phone number</label>
-              <input type="tel" id="phone" name="phone" />
+              <input type="tel" id="phone" name="phone" required />
             </div>
             <div class="registration-form__input">
               <label for="password">password</label>
-              <input type="password" id="password" name="password" />
+              <input type="password" id="password" name="password" required />
+              <span class="error-message"></span>
             </div>
             <!--  -->
             <!-- chequear si confirm password es asi -->
             <div class="registration-form__input">
-              <label for="password">confirm password</label>
-              <input type="password" id="password" name="password" />
+              <label for="confirm-password">confirm password</label>
+              <input
+                type="password"
+                id="confirm-password"
+                name="password"
+                required
+              />
             </div>
+            <input class="btn" type="submit" value="Create Account" />
           </form>
         </div>
         <div class="registration-form__btn">
-          <button type="submit">Create Account</button>
           <p>Already have an account? <a href="">Log in</a></p>
         </div>
       </div>
